--- a/src/components/HeaderComponent/index.css
+++ b/src/components/HeaderComponent/index.css
@@ -12,3 +12,12 @@
     width: 50px;
     border-radius: 20px;
 }
+.company-name {
+    width: 136px;
+    height: 20px;
+    top: 20px;
+    left: 20px;
+    gap: 0px;
+    opacity: 0px;
+
+}
